src/styles/globals.css
/* @tailwind base; */
@tailwind components;
@tailwind utilities;

body{
  width: 100%;
  margin: 0;
  padding: 0;
}


.video-container {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -5;
  overflow: hidden;
}
.video-container2 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  z-index: -5;
  overflow: hidden;
}

.background-video {
  width: 100%;
  height: auto;
  object-fit: cover;
}
.background-video2 {
  width: 100%;
  height: 100vh;
  object-fit: cover;
}

.overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.75); /* Black with 25% opacity */
  z-index: -2;
}
.overlay2 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.75); /* Black with 25% opacity */
}

